Fix issue with grid making the screen too wide

--- a/src/components/modules/GridDisplay/style.css
+++ b/src/components/modules/GridDisplay/style.css
@@ -3,6 +3,6 @@
   border-radius: 10px;
   display: grid;
   margin: 20px auto;
-  height: 330px;
-  width: 330px;
+  height: 80vw;
+  width: 80vw;
 }
